# kube-state-metrics-operator

./: .copier-answers.yml  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  interface.yaml  metadata.yaml  operator.py  pyproject.toml  requirements.txt  run_tests  tox.ini
.github/workflows/: tests.yaml
src/: charm.py
tests/: test_charm.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: test_charm.py
