[project]
name = "kube-state-metrics-operator"
version = "0.0.0"
description = "Kube State Metrics Operator for Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ops",
]

[dependency-groups]
unit = [
    "coverage[toml]>=7.6.1",
    "pytest>=8.3.4",
    "pytest-sugar"
]
